helloWorld，同时解决了本地模拟器的闪退问题

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,6 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+ProjectSpace/.idea/
+ProjectSpace/app/src/androidTest/
+ProjectSpace/app/src/test/
