--- a/ProjectSpace/app/src/main/AndroidManifest.xml
+++ b/ProjectSpace/app/src/main/AndroidManifest.xml
@@ -9,13 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ServicesRemindActivity">
+        <activity android:name=".ui.LaucherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.AllAppActivity" />
+        <activity android:name=".ui.ServicesRemindActivity"/>
     </application>
 
 </manifest>
