准备做一个仿微信聊天界面，先搭个架子，后面有空再填坑

--- a/ProjectSpace/app/src/main/AndroidManifest.xml
+++ b/ProjectSpace/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".ui.AllAppActivity" />
         <activity android:name=".ui.ServicesRemindActivity"/>
+        <activity android:name=".ui.ChatActivity"/>
     </application>
 
 </manifest>
