技术预研双层recyclerView，先弄好单层的

--- a/ProjectSpace/app/src/main/AndroidManifest.xml
+++ b/ProjectSpace/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".ui.AllAppActivity" />
         <activity android:name=".ui.ServicesRemindActivity"/>
         <activity android:name=".ui.ChatActivity"/>
+        <activity android:name=".ui.RegionsActivity"/>
     </application>
 
 </manifest>
