--- a/ProjectSpace/app/build.gradle
+++ b/ProjectSpace/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
+
+    implementation 'androidx.leanback:leanback:1.1.0-alpha03'
 }
