--- a/ProjectSpace/app/src/main/AndroidManifest.xml
+++ b/ProjectSpace/app/src/main/AndroidManifest.xml
@@ -9,6 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!--        提供给另一个进程用来绑定的service-->
+        <service
+            android:name=".service.AIDLService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.personalAction" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </service>
+
+        <activity android:name=".ui.AidlActivity" />
         <activity android:name=".ui.LaucherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,9 +29,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.AllAppActivity" />
-        <activity android:name=".ui.ServicesRemindActivity"/>
-        <activity android:name=".ui.ChatActivity"/>
-        <activity android:name=".ui.RegionsActivity"/>
+        <activity android:name=".ui.ServicesRemindActivity" />
+        <activity android:name=".ui.ChatActivity" />
+        <activity android:name=".ui.RegionsActivity" />
     </application>
 
 </manifest>
