--- a/ProjectSpace/app/src/main/AndroidManifest.xml
+++ b/ProjectSpace/app/src/main/AndroidManifest.xml
@@ -9,13 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--        提供给另一个进程用来绑定的service-->
+        <activity
+            android:name=".ui.ListKotlinActivity"
+            android:exported="false" />
+        <!-- 提供给另一个进程用来绑定的service -->
         <service
             android:name=".service.AIDLService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.personalAction" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </service>
