--- a/ProjectSpace/build.gradle
+++ b/ProjectSpace/build.gradle
@@ -4,12 +4,13 @@ buildscript {
     
     repositories {
         google()
-        jcenter()
-        
+        mavenCentral()
+        maven{ url 'https://maven.aliyun.com/nexus/content/groups/public/'}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.2'
-        
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,7 +20,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven{ url 'https://maven.aliyun.com/nexus/content/groups/public/'}
         maven { url 'https://jitpack.io' }
     }
 }
